--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,9 +9,11 @@
                     <%= err.status %>
                 </p>
                 <hr>
-                <p class="mb-0">
-                    <%= err.stack %>
-                </p>
+                <% if (process.env.NODE_ENV !=='production' ) {%>
+                    <p class="mb-0">
+                        <%= err.stack %>
+                    </p>
+                    <% } %>
             </div>
 
         </div>
